# identicon

./: .gitignore  Cargo.toml  LICENSE  README.md  blobs.json  build.sh  deploy.sh  remove-accounts.sh  run-bindcard.sh  run-request.sh  runall.sh  test.sh  testnet-deploy.sh
docs/maz/: ACTIVITY.md  CHANGELOG.md  DAY1.md  DAY2.md  DAY3.md  DAY4.md  TODO.md
neardev/: dev-account  dev-account.env
res/: identicon.wasm  my_crossword.wasm
src/: cards.rs  definitions.rs  lib.rs  metadata.-rs  payments.rs  requests.rs  tests.rs  upgrades.rs  validators.rs
